--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -1,7 +1,7 @@
-FROM arm32v7/python:3-alpine
+FROM arm64v8/python:3-alpine
 MAINTAINER Barry Carey <mcarey66@gmail.com>
 
-COPY qemu-arm-static /usr/bin
+COPY qemu-aarch64-static /usr/bin
 
 VOLUME /src/
 COPY influxspeedtest.py requirements.txt config.ini /src/
